8315362: NMT: summary diff reports threads count incorrectly